# Cybertruck

./: .gitignore  commands_setupWS.txt  install_development.sh  install_production.sh  sdffsd  uninstall_developement.sh
arduino/: arduinoCom.ino  arduinoLeds_Upload_in_arduino.ino  arduinoMotorAndServos.ino  arduinoMotorAndServos_Upload_in_arduino.ino  calibrationServos.ino  motorTesting.ino
arduino/test/: arduinoCom.ino  calibrationServos.ino  led_example.ino  motorCalibration.ino  motorTesting.ino
dev_ws/: display.launch.py COPY
dev_ws/src/my_package/: package.xml
dev_ws/src/my_package/launch/: talker.launch.py
dev_ws/src/robot_description/: CMakeLists.txt  package.xml
dev_ws/src/robot_description/config/: house_world.sdf
dev_ws/src/robot_description/launch/: display.launch.py  joint_GUI.launch.py  rsp.launch.py  rviz2.launch.py  sim.launch.py
dev_ws/src/robot_description/launch copy/: joint_GUI.launch.py  rsp.launch.py  rviz2.launch.py  sim.launch.py
dev_ws/src/robot_description/meshes/: body_front.stl  body_rear.stl  rims.stl
dev_ws/src/robot_description/urdf/: body.urdf.xacro  robot.urdf.xacro  robot_core.xacro  wheel.urdf.xacro
dev_ws/urdfCOPY/: body.urdf.xacro  robot.urdf.xacro
src/robot_description/: CMakeLists.txt  package.xml  robot_description.xml
src/robot_description/config/: MyRobotHardwareInterface.xml  drive_controller_hardware.yaml  drive_controller_sim.yaml  robot_sim.controller_manager.yaml
src/robot_description/hardware/: cyber_hardware.cpp
src/robot_description/hardware/include/cyber_hardware/: cyber_hardware.hpp
src/robot_description/hardware/include/robot_description/: arduino_comms.hpp  cyber_hardware.hpp
src/robot_description/launch/: joint_GUI.launch.py  rsp.launch.py  rviz2.launch.py  sim.launch.py
src/robot_description/launch111/: sim.launch.py
src/robot_description/meshes/: body_front_window.stl  tire.stl
src/robot_description/src/: MyRobotHardwareInterface.cpp
src/robot_description/urdf/: body.urdf.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  wheel.urdf.xacro
src/robot_sim/: CMakeLists.txt  package.xml
src/robot_sim/launch/: sim.launch.py
src/teleop_mapper/: CMakeLists.txt  package.xml
src/teleop_mapper/config/: teleop_twist_joy.yaml
src/teleop_mapper/launch/: teleop_joystick.launch.py  teleop_keyboard.launch.py
src/teleop_mapper/scripts/: joystick_mapper.py  teleop_mapper.py
